--- a/driver.html
+++ b/driver.html
@@ -11,16 +11,12 @@
             }
         </style>
 
-        <title>Dilution Chart</title>
+        <title>Driver Usage</title>
     </head>
     <body>
         <div class="container">
-            <h1>Dilution Chart</h1>
-            <ul class="list-group">
-                <li class="list-group-item"><a href="drugs.html">Drugs</a></li>
-                <li class="list-group-item"><a href="driver.html">Driver Usage</a></li>
-                <li class="list-group-item"><a href="troubleshooting.html">Troubleshooting</a></li>
-            </ul>
+            <h1>Driver Usage</h1>
+
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     </body>
