--- a/index.html
+++ b/index.html
@@ -5,11 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-        <style>
-            .card {
-                max-width: 18rem;
-            }
-        </style>
+        <link href="style.css" rel="stylesheet">
 
         <title>Dilution Chart</title>
     </head>
@@ -17,11 +13,32 @@
         <div class="container">
             <h1>Dilution Chart</h1>
             <ul class="list-group">
-                <li class="list-group-item"><a href="drugs.html">Drugs</a></li>
-                <li class="list-group-item"><a href="driver.html">Driver Usage</a></li>
-                <li class="list-group-item"><a href="troubleshooting.html">Troubleshooting</a></li>
+                <li class="list-group-item" role="button" aria-expanded="false" data-bs-toggle="collapse" data-bs-target="#drug-section">
+                    <h3>Drugs</h3>
+                    <div class="container collapse" id="drug-section">
+                        <div id="cards"></div>
+                    </div>
+                </li>
+                <li class="list-group-item" role="button" aria-expanded="false" data-bs-toggle="collapse" data-bs-target="#driver-section">
+                    <h3>Driver Usage</h3>
+                    <div class="container collapse" id="driver-section">
+                        <ul class="list-group" id="driver-entries"></ul>
+                    </div>
+                </li>
+                <li class="list-group-item" role="button" aria-expanded="false" data-bs-toggle="collapse" data-bs-target="#troubleshooting-section">
+                    <h3>Troubleshooting</h3>
+                    <div class="container collapse" id="troubleshooting-section">
+                        <ul class="list-group">
+                        </ul>
+                    </div>
+                </li>
             </ul>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+        <script src="https://d3js.org/d3.v7.min.js"></script>
+        <script src="drugs.js"></script>
+        <script src="driver.js"></script>
+        <script src="drug_display.js"></script>
+        <script src="driver_display.js"></script>
     </body>
 </html>
