some basic styling

--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
         <div class="container">
             <h1>Dilution Chart</h1>
             <ul class="list-group">
-                <li class="list-group-item" role="button" aria-expanded="false" data-bs-toggle="collapse" data-bs-target="#drug-section">
+                <li class="list-group-item section-button" role="button" aria-expanded="false" data-bs-toggle="collapse" data-bs-target="#drug-section">
                     <h3>Drugs</h3>
                     <div class="container collapse" id="drug-section">
                         <div id="cards"></div>
                     </div>
                 </li>
-                <li class="list-group-item" role="button" aria-expanded="false" data-bs-toggle="collapse" data-bs-target="#driver-section">
+                <li class="list-group-item section-button" role="button" aria-expanded="false" data-bs-toggle="collapse" data-bs-target="#driver-section">
                     <h3>Driver Usage</h3>
                     <div class="container collapse" id="driver-section">
                         <ul class="list-group" id="driver-entries"></ul>
                     </div>
                 </li>
-                <li class="list-group-item" role="button" aria-expanded="false" data-bs-toggle="collapse" data-bs-target="#troubleshooting-section">
+                <li class="list-group-item section-button" role="button" aria-expanded="false" data-bs-toggle="collapse" data-bs-target="#troubleshooting-section">
                     <h3>Troubleshooting</h3>
                     <div class="container collapse" id="troubleshooting-section">
                         <ul class="list-group">
