--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <li class="list-group-item section-button" role="button" aria-expanded="false" data-bs-toggle="collapse" data-bs-target="#troubleshooting-section">
                     <h3>Troubleshooting</h3>
                     <div class="container collapse" id="troubleshooting-section">
-                        <ul class="list-group">
+                        <ul class="list-group" id="troubleshooting-entries">
                         </ul>
                     </div>
                 </li>
@@ -38,7 +38,9 @@
         <script src="https://d3js.org/d3.v7.min.js"></script>
         <script src="drugs.js"></script>
         <script src="driver.js"></script>
+        <script src="troubleshooting.js"></script>
         <script src="drug_display.js"></script>
         <script src="driver_display.js"></script>
+        <script src="troubleshooting_display.js"></script>
     </body>
 </html>
